--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-croniter
-pandas
-requests
-bottleneck>=1.3.4
-html5lib
-numexpr>=2.8.4
-bs4
+beautifulsoup4==4.12.3
+Bottleneck==1.4.0
+bs4==0.0.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
+croniter==3.0.3
+html5lib==1.1
+idna==3.7
+numexpr==2.10.1
+numpy==2.0.1
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+six==1.16.0
+soupsieve==2.5
+tzdata==2024.1
+urllib3==2.2.2
+webencodings==0.5.1
